# ROAR-Autonomous-System

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  ASU_ROAR_Autonomous_System_Arch.drawio  README.md  frames.gv  initialize_project.sh  rememberListChat.md
.hooks/: commit-msg.config.json
Control/AdaptivePurePursuit/: AdaptiveLd.py  CMakeLists.txt  package.xml
Control/AdaptivePurePursuit/config/: params.yaml
Control/AdaptivePurePursuit/launch/: Control.launch  controlTest.launch  headless.launch
Control/AdaptivePurePursuit/scripts/: AdaptiveLd.py  __init__.py  pathTest.py
Control/scripts/: AdaptiveLd.py
Localization/LandmarkLocalization/: CMakeLists.txt  package.xml
Localization/LandmarkLocalization/src/: LL.cpp
Localization/UKF/: CMakeLists.txt
Localization/UKF/config/: initialPose.yaml  landmarks.yaml  rosconsole.config
Localization/UKF/include/: Quaternion.h  ROAR_UKF.h
Localization/UKF/launch/: ukf.launch
Localization/UKF/src/: Quaternion.cpp  ROAR_UKF.cpp  main.cpp
Localization/ekf/: CMakeLists.txt  package.xml
Localization/ekf/src/: ekf.cpp
Localization/ekf2/: CMakeLists.txt  package.xml
Localization/ekf2/src/: ekf2.cpp
Localization/icp_localization/: CMakeLists.txt  package.xml
Localization/icp_localization/include/: pcd_io.h  ply_io.h
Localization/icp_localization/src/: icp_node.cpp
Localization/liveplotter/: CMakeLists.txt  package.xml
Localization/liveplotter/scripts/: live_plotting.py
Path Planning/apf_trials/: package.xml
Path Planning/apf_trials/launch/: turtlebot3_APF_world.launch
Path Planning/apf_trials/src/: APF.py  APF_update.py  Lyapunov.py  Lyapunov_update.py
Path Planning/heightmap_costmap/: cost_x.csv  cost_y.csv  total_cost.csv  total_cost00.csv
Path Planning/heightmap_costmap/launch/: calibration.launch  costmap.launch  pathgen1.launch
Path Planning/heightmap_costmap/scripts/: a_star.py  heightmap_to_costmap.py  map_calibration.py
Path_Planning/apf_trials/: package.xml
Path_Planning/apf_trials/Results/: real_path.csv
Path_Planning/apf_trials/config/: obstacleParams.yaml  params.yaml
Path_Planning/apf_trials/launch/: APF.launch
Path_Planning/apf_trials/src/: APF_update.py
Path_Planning/heightmap_costmap/: CMakeLists.txt  README.md  package.xml  path.csv
Path_Planning/heightmap_costmap/Results/: cost_x.csv  costmap_params.txt  create_costmap.py  mini_straight_line.csv  path_costmap.csv  real_path.csv  straight_line_path.csv
Path_Planning/heightmap_costmap/config/: costmap_params.yaml
Path_Planning/heightmap_costmap/launch/: calibration.launch  costmap.launch  pathgen1.launch
Path_Planning/heightmap_costmap/scripts/: a_star.py  map_calibration.py  (+1 more)
Path_planning/apf_trials/: CMakeLists.txt
Perception/: aruco_tracking_node.py
Perception/aruco_tracking/: CMakeLists.txt  package.xml
Perception/aruco_tracking/msg/: Landmark.msg  LandmarkArray.msg
Perception/aruco_tracking/nodes/: node.py
Perception/aruco_tracking/scripts/: PoseEstimation.py  arucoPublisher.py  aruco_tracking_node.py
Perception/aruco_tracking/src/aruco_tracking/: aruco_tracking.py
Perception/uv_detector_node/: uv_detector_node.cpp
Perception/zed_obstacle_detector/: CMakeLists.txt  CONTINUATION_PROMPT.md  PARAMETER_NAMESPACE_ANALYSIS.md  QUICK_REFERENCE.md  REAL_WORLD_DEPLOYMENT.md  ROS_PARAMETERS_NAMESPACES_GUIDE.md  SIMPLE_GUIDE.md  TRANSFORMATION_MODULE_IMPROVEMENTS.md  package.xml  package.xml.save  test_parameters.sh  zed_obstacle_detector_node.cpp  zed_obstacle_detector_node.cpp.save  zed_obstacle_detector_node_new.cpp
Perception/zed_obstacle_detector/cfg/: ZedObstacleDetector.cfg
Perception/zed_obstacle_detector/config/: high_performance_params.yaml  params.yaml  test_params.yaml
Perception/zed_obstacle_detector/include/zed_obstacle_detector/: cluster_detector.h  coordinate_transformer.h  ground_detector.h  obstacle_detector.h  obstacle_tracker.h  performance_monitor.h  point_cloud_processor.h
Perception/zed_obstacle_detector/launch/: pc.launch  zed2i_debug.launch  zed2i_real_world.launch  zed_camera_generic.launch
Perception/zed_obstacle_detector/msg/: ClusterInfo.msg  ClusterInfoArray.msg
Perception/zed_obstacle_detector/scripts/: launch_gui.sh  zed_launcher_function.sh
Perception/zed_obstacle_detector/src/: cluster_detector.cpp  coordinate_transformer.cpp  ground_detector.cpp  obstacle_detector.cpp  obstacle_tracker.cpp  performance_monitor.cpp  point_cloud_processor.cpp
Performance Monitor/: performance_monitor.py
Supervisor/FSM/: CMakeLists.txt  README.md  package.xml
Supervisor/FSM/config/: drilling_params.yaml
Supervisor/FSM/launch/: Drilling.launch
Supervisor/FSM/src/: drilling_state_machine.py  low_level_sim.py
Supervisor/roscan/: CMakeLists.txt  package.xml  setup.py
Supervisor/roscan/nodes/: node.py  node_bak.py
Supervisor/roscan/src/roscan/: __init__.py  can_frame_parser.py  encoder_parser.py  gps_parser.py  imu_parser.py  keyboard_control_parser.py  ros_msg_parser.py  test_parser.py
Supervisor/supervisor/: CMakeLists.txt  README.md  package.xml  setup.py
Supervisor/supervisor/config/: communication_config.json  config.json  config_example.json  drilling_config.json  navigation_task_config.json  teleop_config.json
Supervisor/supervisor/include/supervisor/: Config.hpp  ControlManager.hpp  ErrorHandler.hpp  HeartbeatChecker.hpp  Logger.hpp  NodeLifecycleManager.hpp  StateDatabase.hpp  SupervisorNode.hpp  Types.hpp
Supervisor/supervisor/nodes/: joystick_to_roscan.py  node.py  teleop.py  test_listener.py  test_talker.py
Supervisor/supervisor/src/: config-manager.py
Supervisor/supervisor/src/supervisor/: __init__.py  controller_manager.py  drilling_module.py  health_monitor.py  logger.py  module_manager.py
Supervisor/supervisor/test/: drilling_test.py
(+11 files in other folders)
