<?xml version="1.0"?>
<package format="2">
  <name>fsm_pkg</name>
  <version>0.0.0</version>
  <description>The fsm_pkg package contains a SMACH state machine for a drilling mechanism.</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>